; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/liquidio/extr_cn23xx_pf_device.c_cn23xx_setup_iq_regs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/liquidio/extr_cn23xx_pf_device.c_cn23xx_setup_iq_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.octeon_device = type { i64, %struct.TYPE_6__*, %struct.TYPE_5__*, %struct.TYPE_4__, %struct.octeon_instr_queue** }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i64 }
%struct.octeon_instr_queue = type { i64, i32*, i32*, i32, i32 }

@.str = private unnamed_addr constant [47 x i8] c"InstQ[%d]:dbell reg @ 0x%p instcnt_reg @ 0x%p\0A\00", align 1
@CN23XX_INTR_CINT_ENB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.octeon_device*, i64)* @cn23xx_setup_iq_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cn23xx_setup_iq_regs(%struct.octeon_device* %0, i64 %1) #0 {
  %3 = alloca %struct.octeon_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.octeon_instr_queue*, align 8
  %6 = alloca i32, align 4
  store %struct.octeon_device* %0, %struct.octeon_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %8 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %7, i32 0, i32 4
  %9 = load %struct.octeon_instr_queue**, %struct.octeon_instr_queue*** %8, align 8
  %10 = load i64, i64* %4, align 8
  %11 = getelementptr inbounds %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %9, i64 %10
  %12 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %11, align 8
  store %struct.octeon_instr_queue* %12, %struct.octeon_instr_queue** %5, align 8
  %13 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %14 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %13, i32 0, i32 3
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %4, align 8
  %18 = add i64 %17, %16
  store i64 %18, i64* %4, align 8
  %19 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @CN23XX_SLI_IQ_BASE_ADDR64(i64 %20)
  %22 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %23 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %22, i32 0, i32 4
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @octeon_write_csr64(%struct.octeon_device* %19, i32 %21, i32 %24)
  %26 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %27 = load i64, i64* %4, align 8
  %28 = call i32 @CN23XX_SLI_IQ_SIZE(i64 %27)
  %29 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %30 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @octeon_write_csr(%struct.octeon_device* %26, i32 %28, i32 %31)
  %33 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %34 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %33, i32 0, i32 2
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i64 0
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = inttoptr i64 %38 to i32*
  %40 = load i64, i64* %4, align 8
  %41 = call i32 @CN23XX_SLI_IQ_DOORBELL(i64 %40)
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %39, i64 %42
  %44 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %45 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %44, i32 0, i32 2
  store i32* %43, i32** %45, align 8
  %46 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %47 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %46, i32 0, i32 2
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i64 0
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = inttoptr i64 %51 to i32*
  %53 = load i64, i64* %4, align 8
  %54 = call i32 @CN23XX_SLI_IQ_INSTR_COUNT64(i64 %53)
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i32, i32* %52, i64 %55
  %57 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %58 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %57, i32 0, i32 1
  store i32* %56, i32** %58, align 8
  %59 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %60 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %59, i32 0, i32 1
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 0
  %63 = load i64, i64* %4, align 8
  %64 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %65 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %64, i32 0, i32 2
  %66 = load i32*, i32** %65, align 8
  %67 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %68 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %67, i32 0, i32 1
  %69 = load i32*, i32** %68, align 8
  %70 = call i32 @dev_dbg(i32* %62, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i64 %63, i32* %66, i32* %69)
  %71 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %72 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %71, i32 0, i32 1
  %73 = load i32*, i32** %72, align 8
  %74 = call i32 @readq(i32* %73)
  store i32 %74, i32* %6, align 4
  %75 = load %struct.octeon_device*, %struct.octeon_device** %3, align 8
  %76 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %75, i32 0, i32 0
  %77 = load i64, i64* %76, align 8
  %78 = icmp ne i64 %77, 0
  br i1 %78, label %79, label %87

79:                                               ; preds = %2
  %80 = load i32, i32* %6, align 4
  %81 = load i32, i32* @CN23XX_INTR_CINT_ENB, align 4
  %82 = or i32 %80, %81
  %83 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %84 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %83, i32 0, i32 1
  %85 = load i32*, i32** %84, align 8
  %86 = call i32 @writeq(i32 %82, i32* %85)
  br label %93

87:                                               ; preds = %2
  %88 = load i32, i32* %6, align 4
  %89 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %90 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %89, i32 0, i32 1
  %91 = load i32*, i32** %90, align 8
  %92 = call i32 @writeq(i32 %88, i32* %91)
  br label %93

93:                                               ; preds = %87, %79
  %94 = load %struct.octeon_instr_queue*, %struct.octeon_instr_queue** %5, align 8
  %95 = getelementptr inbounds %struct.octeon_instr_queue, %struct.octeon_instr_queue* %94, i32 0, i32 0
  store i64 0, i64* %95, align 8
  ret void
}

declare dso_local i32 @octeon_write_csr64(%struct.octeon_device*, i32, i32) #1

declare dso_local i32 @CN23XX_SLI_IQ_BASE_ADDR64(i64) #1

declare dso_local i32 @octeon_write_csr(%struct.octeon_device*, i32, i32) #1

declare dso_local i32 @CN23XX_SLI_IQ_SIZE(i64) #1

declare dso_local i32 @CN23XX_SLI_IQ_DOORBELL(i64) #1

declare dso_local i32 @CN23XX_SLI_IQ_INSTR_COUNT64(i64) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i64, i32*, i32*) #1

declare dso_local i32 @readq(i32*) #1

declare dso_local i32 @writeq(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
